 	- do not add default dependencies to /usr mount unit;
 	- refuse mount on symlink;
 	- add support for tcp keep alive variables;
 	- add support for tcp defer accept;
 	- downgrade log messages about non-existant cgroup attributes to LOG_DEBUG;
 	- use bus_job_method_cancel function in common code for dbus methods that cancel a job;
 	- rename job.subscribed field to job.clients;
 * libsystemd:
 	- always call epoll_ctl() on mask-updates if edge-triggered;
 	- don't require a signal event source to be enabled for the child event source to work;
 	- change type for address family to "int";
 	- remove sd-rtnl module;
 	- add support for CLOCK_BOOTTIME in sd-event module;
 	- always explicitly close bus from main programs;
 	- fix bloom filter calculation in sd-bus module;
 	- do not arm timers unnecessarily in sd-event module;
 	- remove bus arg from bus_verify_polkit_async_registry_free function;
 * initctl:
 	- don't hide error code;
 * logind:
 	- allow switching to unused VTs via SwitchTo();
 	- use const modifier for id field in Session struct;
 	- update systemd-user PAM configuration file;
 	- add new session type "web" for PAM web clients, such as cockpit;
 * loginctl:
 	- change return type to void in help function;
 * units:
 	- bring systemd-tmpfiles-setup-dev.service closer to systemd-tmpfiles-setup.service;
 	- conditionalize static device node logic on CAP_SYS_MODULES instead of CAP_MKNOD;
 	- conditionalize configfs and debugfs with CAP_SYS_RAWIO;
 	- make ExecStopPost action part of ExecStart;
 	- remove systemd-ask-password-console path and service;
 	- remove systemd-ask-password-wall path and service;
 	- remove spurious newline in systemd fsck root service;
 * kdbus:
 	- update header;
 * systemctl:
 	- show StatusErrno value in "systemctl status";
 	- remove property argument option;
 	- don't open the password agent;
 	- remove no-ask-password argument option;
 	- remove help command;